--- a/CLIENT/chat/src/App.css
+++ b/CLIENT/chat/src/App.css
@@ -388,3 +388,124 @@ background-color: azure;
   font-weight: 600;
   cursor: pointer;
 }
+
+.editSettings{
+  width: 1000px;
+  height: 500px;
+  position: absolute;
+  background: white;
+  z-index: 3;
+  top: 9%;
+  left: 20.5%;
+  border: 1px solid black;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  gap: 30px;
+  display: none;
+}
+
+.fileUpload{
+  width: 100px;
+  height: 100px;
+  border-radius: 50%;
+  background-color: #69e0bd;
+  background-image: url('./assets/pexels-pok-rie-33563-2049422.jpg');
+  outline: none;
+  border: none;
+  color: transparent;
+  background-color: transparent;
+}
+
+.Maincomponent{
+  margin: 0;
+  padding: 0;
+  width: 100%;
+  height: 100vh;
+  display: flex;
+ flex-direction: row;
+ justify-content: center;
+  position: relative;
+}
+
+.leftSideMain{
+  width: 365px;
+  height: 56px;
+  /* border-right: 0.5px solid #ddd; */
+  /* background-color: #F5F5F5; */
+}
+.rightSide{
+  width: 100%;
+  background-color: aliceblue;
+}
+.rightSideMain{
+  width: 100%;
+  height: 56px;
+  background-color: #fff;
+}
+
+.searchDiv{
+  width: 289px;
+  height: 40px;
+}
+.searchDiv input{
+  width: 100%;
+  height: 100%;
+  border: none;
+  outline: none;
+  background-color: #F5F5F5;
+  border-radius: 20px;
+  padding: 4px 8px;
+  color: #707991;
+  font-size: 16px;
+}
+.leftTop{
+    display: flex;
+    gap: 10px;
+    padding: 10px;
+}
+.IndividualContact{
+  width: 365px;
+  height: 72px;
+  padding: 12px;
+  display: flex;
+  gap: 16px;
+}
+.IndividualContact1{
+  width: 100%;
+  height: 56px;
+  padding: 10px;
+  display: flex;
+  gap: 16px;
+}
+.contactListIcon{
+  width: 48px;
+  height: 48px;
+  border-radius: 50%;
+}
+.contactListIcon1{
+  width: 40px;
+  height: 40px;
+  border-radius: 50%;
+}
+/* .contactList{
+  padding: 12px;
+} */
+
+.contactName{
+  color: #011627;
+  font-size: 16px;
+}
+
+.contactNameDiv{
+  width: 268px;
+  height: 46px;
+  display: flex;
+  gap: 4px;
+  flex-direction: column;
+}
+.LastMessage1{
+  color: #707991;
+  font-size: 14px;
+}
