--- a/CLIENT/chat/src/App.css
+++ b/CLIENT/chat/src/App.css
@@ -75,6 +75,16 @@
   background-color:rgb(62,145,117 ) ;
 }
 
+
+.loginBTN2{
+  border-radius: 5px;
+  width: 125px;
+  height: 33px;
+  z-index: 1;
+  background-color:rgb(62,145,117 ) ;
+}
+
+
 .shape{
   clip-path: polygon(50% 0%, 0% 100%, 100% 100%);
   background-color: #69e0bd;
@@ -185,6 +195,8 @@ background-color: azure;
   opacity: 0.6;
   font-size: 9px;
   font-weight: 500;
+  display: flex;
+  flex-direction: column;
 }
 
 .contactName {
@@ -427,8 +439,9 @@ width: 95% !important;
 
 .Maincomponent{
   margin: 0;
-  padding: 0;
+  padding: 10px;
   width: 100%;
+  background-color: rgb(62, 145, 117);;
   /* height: 100vh; */
   /* display: flex;
  flex-direction: row;
@@ -437,13 +450,16 @@ width: 95% !important;
 }
 
 .leftSideMain{
-  width: 365px;
+ width: 25%;
   height: 56px;
+  display: flex;
+  padding: 10px;
+  align-items: center;
   /* border-right: 0.5px solid #ddd; */
   /* background-color: #F5F5F5; */
 }
 .rightSide{
-  width: 100%;
+  width: 70%;
 }
 .rightSideMain{
   width: 100%;
@@ -452,7 +468,7 @@ width: 95% !important;
 }
 
 .searchDiv{
-  width: 289px;
+  width: 100%;
   height: 40px;
 }
 .searchDiv input{
@@ -467,16 +483,21 @@ width: 95% !important;
   font-size: 16px;
 }
 .leftTop{
-    display: flex;
+    /* display: flex; */
     gap: 10px;
     padding: 10px;
 }
 .IndividualContact{
-  width: 365px;
+  /* width: 365px; */
   height: 72px;
   padding: 12px;
   display: flex;
   gap: 16px;
+}
+.IndividualContact:hover{
+  background-color: #F5F5F5;
+  transition: 0.5s;
+  cursor: pointer;
 }
 .IndividualContact1{
   width: 100%;
@@ -496,9 +517,9 @@ width: 95% !important;
   border-radius: 50%;
 }
 .contactList{
-  width: 365px;
+  width: 25%;
   background-color: #fff;
-  height: calc(100vh - 60px);
+  height: calc(98vh - 60px);
   overflow-y: scroll;
   scrollbar-width: thin;
   overflow-x: hidden;
@@ -519,6 +540,16 @@ width: 95% !important;
   gap: 4px;
   flex-direction: column;
 }
+
+.contactNameDiv2{
+  width: 268px;
+  height: 46px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  gap: 4px;
+}
+
 .LastMessage1{
   color: #707991;
   font-size: 14px;
@@ -528,11 +559,15 @@ width: 95% !important;
   width: 100%;
   height: 100%;
   display: flex;
+  background-color: #fff;
+  flex-direction: row;
+  justify-content: center;
+  align-content: center;
 }
 
 .contactListFav{
   width: 100%;
-  height: calc(100vh - 60px);
+  height: calc(98vh - 60px);
   background-image: url('./assets/main/Chats.svg');
   display: flex;
 }
@@ -544,7 +579,7 @@ width: 95% !important;
   background-color: #69e0bd;
 }
 .chatBOX{
-  width: 915px;
+  width: 75%;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -552,34 +587,36 @@ width: 95% !important;
 }
 
 .chatBoxfooter{
-  width: 600px;
+  width: 60%;
   /* background-color: #fff; */
   display: flex;
   justify-content: center;
   align-items: center;
-  position: absolute;
-  bottom: 0;
+  position: fixed;
+  bottom: 10px;
 }
 
 .sender{
   background-color: #78E378;
   margin: 10px;
-  /* width: 100%; */
+  width: 100%;
   padding: 4px 8px ;
-  font-size: 13px;
+  font-size: 14px;
   border-radius: 5px;
   width: 100%;
   text-align: right;
+  font-weight: 500;
  
 }
 .reciver{
   background-color: #F5F5F5;
   margin: 10px;
   padding: 4px 8px ;
-  font-size: 13px;
+  font-size: 14px;
   border-radius: 5px;
   width: 100%;
-  text-align: left
+  text-align: left;
+  font-weight: 500;
 }
 
 .message{
@@ -592,4 +629,58 @@ width: 95% !important;
 }
 .chatBoxheader{
   height: 80vh;
+  overflow:scroll;
+  scroll-behavior: smooth;
+}
+
+.MainSetting{
+  width: 5%;
+  background-color: #F5F5F5;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.ImageDiv{
+  width: 5%;
+  background-color: #f5f5f5;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.addUserDetails{
+  padding: 5px 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 56px;
+}
+.contactListIcon2{
+  width: 30px;
+  height: 30px;
+  border-radius: 50%;
+  cursor: pointer;
+}
+.selectAddUser{
+  width: 50px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.contactListIcon2{
+  width: 20px;
+  height: 20px;
+  border-radius: 50%;
+  cursor: pointer;
+}
+
+.addUserBtn{
+  display: flex;
+  justify-content: end;
+}
+
+.chatBoxheader::-webkit-scrollbar {
+  display: none;
 }
