--- a/CLIENT/chat/src/App.css
+++ b/CLIENT/chat/src/App.css
@@ -597,40 +597,42 @@ width: 95% !important;
 }
 
 .sender{
-  background-color: #78E378;
-  margin: 10px;
-  width: 100%;
+  background-color: #3E9175;
+  color: #fff;
   padding: 4px 8px ;
   font-size: 14px;
   border-radius: 5px;
-  width: 100%;
-  text-align: right;
   font-weight: 500;
+  min-width:10px;
+  max-width: 500px;
  
 }
 .reciver{
   background-color: #F5F5F5;
-  margin: 10px;
   padding: 4px 8px ;
   font-size: 14px;
   border-radius: 5px;
-  width: 100%;
-  text-align: left;
+  min-width:10px;
+  max-width: 500px;
   font-weight: 500;
 }
 
 .message{
   margin: 10px;
-  width: 800px;
+  width: 98%;
+  display: flex;
 }
 
 .messageBox{
   width: 100%;
 }
 .chatBoxheader{
-  height: 80vh;
+  height: 70vh;
   overflow:scroll;
   scroll-behavior: smooth;
+  flex: 1;
+  display: flex;
+  flex-direction: column-reverse;
 }
 
 .MainSetting{
@@ -655,7 +657,9 @@ width: 95% !important;
   justify-content: center;
   align-items: center;
   height: 56px;
+  cursor: pointer;
 }
+
 .contactListIcon2{
   width: 30px;
   height: 30px;
@@ -675,6 +679,12 @@ width: 95% !important;
   border-radius: 50%;
   cursor: pointer;
 }
+.contactListIcon3{
+  width: 30px;
+  height: 30px;
+  border-radius: 50%;
+  cursor: pointer;
+}
 
 .addUserBtn{
   display: flex;
@@ -683,4 +693,50 @@ width: 95% !important;
 
 .chatBoxheader::-webkit-scrollbar {
   display: none;
+}
+
+.SettingDiv{
+  width: 100%;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.logoutDiv{
+  width: 100%;
+  height: 40px;
+  font-size: 16px;
+  font-weight: 600;
+  color: red;
+  padding: 5px 20px;
+  margin: 5px 0;
+  display: flex;
+  justify-content: left;
+  align-items: center;
+  gap: 20px;
+}
+
+.profileImg{
+  width: 100px;
+  height: 100px;
+  border-radius: 50%;
+  background-color: #69e0bd;
+}
+.profileDiv{
+  width: 100%;
+  height: 100%;
+  display: flex;
+  flex-direction: row;
+  gap: 15px;
+  padding: 0 20px;
+}
+
+.profileName{
+  width: 100%;
+  height: 100px;
+  display: flex;
+  align-items: center;
+  font-weight: 500;
 }
